@@ -1,3 +1,9 @@
+2010-01-05  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkMenu.c (MenuWidgetObjCmd): [Bug 220950]: Do not delete
+	menu entries if the first index to delete is explicitly after the last
+	index of existing entries.
+
 2010-01-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/dialog.tcl: Backported fix for tk_dialog <Return> binding
